wrap long collection titles (bug 723083)

--- a/media/css/legacy/main-mozilla.css
+++ b/media/css/legacy/main-mozilla.css
@@ -974,7 +974,7 @@ a:focus.button.negative {
 }
 
 .item h3, .item h4 {
-    overflow: visible;
+    word-wrap: break-word;
 }
 
 /** END Adding focus outlines to buttons **/
